--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.0.32", features = ["derive"] }
 eyre = "0.6.8"
+itertools = "0.10.5"
 nom = "7.1.1"
 once_cell = "1.16.0"
 regex = "1.7.0"
