--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,4 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,windows,linux,macos,rust
 
 session.txt
+cached_input
