--- a/kotlin/build.gradle
+++ b/kotlin/build.gradle
@@ -7,6 +7,16 @@ repositories {
     mavenCentral()
 }
 
+dependencies {
+    implementation "com.github.ajalt.clikt:clikt:4.2.1"
+
+    implementation 'io.ktor:ktor-client-cio:2.3.6'
+    implementation 'io.ktor:ktor-client-core:2.3.6'
+    implementation "io.ktor:ktor-client-logging:2.3.6"
+
+    implementation 'ch.qos.logback:logback-classic:1.4.13'
+}
+
 kotlin {
     jvmToolchain(21)
 }
